force-app/src/objects/ffcmutil__CashMatchingUtilitiesSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>CMU Settings</description>
    <fields>
        <fullName>ffcmutil__CashMatchingHistoryQueryLimit__c</fullName>
        <label>Cash Matching History Query Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffcmutil__CheckMatchOperationsBatchSize__c</fullName>
        <label>Check Match Operations Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffcmutil__ChunkSize__c</fullName>
        <label>Amend Data Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffcmutil__LogRecordsInsteadOfEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set this field to true to store the log information into the &quot;Notification Log&quot; object instead of sending it through email. You will have to create a new tab for the &quot;Notification Log&quot; object to see such information.</description>
        <label>Send Notifications Instead of Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffcmutil__OutputEmailAddress__c</fullName>
        <label>Output Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ffcmutil__RemoveOrphanedCMJBatchSize__c</fullName>
        <label>Remove Orphaned CMJ Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CashMatching Utilities Settings</label>
</CustomObject>